<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_nuevo_reporte"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#528E52"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_parque_seleccionado"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvNombreParqueSeleccionado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:color/darker_gray"
        android:padding="10dp"
        android:textColor="#717171"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck"
        tools:text="Parque Las Riberas"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_detalle_reporte"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etDescripcionReporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_ejemplo_reporte"
        android:inputType="textMultiLine"
        android:lines="4"
        android:gravity="top"
        android:padding="10dp"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnEnviarReporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_enviar_reporte"
        android:backgroundTint="#528E52"
        android:textSize="18sp"
        android:padding="12dp"/>

</LinearLayout>