<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/Registrar_Usuario"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#b0d7b0">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ET_crearCuenta"
        android:layout_marginTop="100dp"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        />

    <EditText
        android:id="@+id/etNombreR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/correo_icon"
        android:hint="@string/ET_nombre"
        android:inputType="textEmailSubject"
        android:minHeight="48dp"
        android:background="#639763 "
        />
    <EditText
        android:id="@+id/etApellidoR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/correo_icon"
        android:hint="@string/et_apellidosR"
        android:inputType="textEmailSubject"
        android:minHeight="48dp"
        android:background="#639763 "
        />

    <EditText
        android:id="@+id/etEmailR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/email_icon"
        android:hint="@string/ET_correoRegistrar"
        android:inputType="textEmailSubject"
        android:minHeight="48dp"
        android:background="#639763 "
        />

    <EditText
        android:id="@+id/etPasswordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:drawableStart="@drawable/password_icon"
        android:hint="@string/ET_contraseñaRegistrar"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:background="#639763 "
        />


    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_registrarse"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:backgroundTint="#4BA451"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/cesped_image" />


</LinearLayout>