<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/Inicio_Sesion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b0d7b0"

    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/ivInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/IV_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/IV_marginTop"
        android:contentDescription="@string/image_description"
        android:src="@drawable/icon_user1"
        />

    <TextView
        android:id="@+id/etInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/TV_inicio_de_sesion"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
    />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ET_marginStart"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="@dimen/ET_marginEnd"
        android:drawableStart="@drawable/correo_icon"
        android:hint="@string/ET_hintCorreo"
        android:inputType="textEmailSubject"
        android:minHeight="48dp"
        android:background="#639763 "
         />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ET_marginStart"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/ET_marginEnd"
        android:drawableStart="@drawable/password_icon"
        android:hint="@string/ET_hintPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:background="#639763 "
         />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_InicioSesion"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:backgroundTint="#4BA451"
        />

    <TextView
        android:id="@+id/tvRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/TV_Registrar"
        android:textColor="#0000ff"
        android:textSize="16sp"
        android:textStyle="bold"
         />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="201dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/cesped_image"
        />


</LinearLayout>