<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Encabezado verde fuerte -->
    <LinearLayout
        android:id="@+id/header_top"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="#528E52"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <!-- Encabezado verde claro -->
    <LinearLayout
        android:id="@+id/header_bottom"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="#71AB71"
        android:elevation="10dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_top">

        <TextView
            android:id="@+id/tv_parkManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:letterSpacing="0.09"
            android:text="@string/tv_encabezado_parkManager"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- MAPA DE GOOGLE MAPS -->
    <FrameLayout
        android:id="@+id/map_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E4E4E4"
        app:layout_constraintBottom_toTopOf="@+id/botones_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_bottom">

        <!-- MAPVIEW -->
        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            />

        <!-- Barra de búsqueda flotante sobre el mapa -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/lupa_icon"
                    app:iconTint="#36A836" />

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/et_buscarParques"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="#333333"
                    android:textSize="14sp" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/botones_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <!-- FILA DE BOTONES PLAYGROUND -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <!-- BOTÓN 1  -->
            <Button
                android:id="@+id/btn_Parques"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/tx_btnParques"
                android:textColor="#528E52"
                android:textSize="12sp"
                app:icon="@drawable/parques_icon"
                app:iconGravity="textTop"
                app:iconTint="#528E52"
                app:strokeColor="#528E52"
                app:strokeWidth="2dp" />



            <!-- BOTÓN 2 -->
            <Button
                android:id="@+id/btn_CerrarSesion"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/btn_cerrarSesion"
                android:textColor="#528E52"
                android:textSize="13sp"
                app:icon="@drawable/cerrar_sesion_icon"
                app:iconGravity="textTop"
                app:iconTint="#528E52"
                app:strokeColor="#528E52"
                app:strokeWidth="2dp" />

        </LinearLayout>

    </LinearLayout>

    <!-- FOOTER -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:background="#E4E4E4"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>